--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row justify-content-md-center content">
       <p align="center">A passionista is someone who is so passionate about something and want to show their passion and help others become passionate it also.</p>
-      <%= link_to "Become a Passionista!", new_user_registration_path, class:"btn" %>
+      <%= link_to "Become a Passionista!", new_user_registration_path, class:"btn btn-primary" %>
     </div>
   </div>
 </div>
