--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,20 +4,12 @@
 $main-color: #7302A1;
 
 nav a {
-    display: block;
-    font-size: 1.3rem;
-    font-weight: 400;
-    letter-spacing: 0.01rem;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-a{
-  color: #656565;
-  transition: color 0.2s ease-in-out;
-  -webkit-transition: color 0.2s ease-in-out;
-}
-a:hover{
-  color: $main-color;
+  display: block;
+  font-size: 1.3rem;
+  font-weight: 400;
+  letter-spacing: 0.01rem;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 #cover-jumbo{
   margin-top: 50px;
@@ -51,16 +43,17 @@ a:hover{
   p{
     font-weight: 600;
   }
-  a.btn {
+  a.btn-primary {
     box-sizing: border-box;
     text-decoration: none;
     overflow: hidden;
     color: #fff;
     font-weight: 600;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
+    border: none;
     transition: color 0.7s cubic-bezier(0.215, 0.61, 0.355, 1),background 0.7s cubic-bezier(0.215, 0.61, 0.355, 1),border 0.7s cubic-bezier(0.215, 0.61, 0.355, 1);
   }
-  a.btn:hover{
-    background: rgba(0,0,0,0.5);
+  a.btn-primary:hover{
+    background: rgba(0, 0, 0, 0.5);
   }
 }
