--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <div class="my-2 my-lg-0">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Programming</a>
+            <a class="nav-link" href="<%= programming_path %>">Programming</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Dancing</a>
