--- a/app/views/welcome/dancing.html.erb
+++ b/app/views/welcome/dancing.html.erb
@@ -1,8 +1,8 @@
-<div id="passion-cover" class="jumbotron" style="background-image: url('<%= asset_path 'programming.jpg' %>')">
+<div id="passion-cover" class="jumbotron" style="background-image: url('<%= asset_path 'salsa.jpg' %>')">
   <div class="overlay"></div>
   <div class="row justify-content-md-center d-flex h-100">
     <div class="col-md-8 content align-self-center">
-      <div align="center" class="main-text">Programming Bootcamp</div>
+      <div align="center" class="main-text">Salsa Bootcamp</div>
       <div align="center" class="secondary-text">Learn AND Teach!</div>
       <div align="center" class="paragraph">FOLLOW-ALONG  SELF-PRACTISE TEAM-CHALLENGE</div>
       <div align="center">
@@ -22,11 +22,11 @@
   <div class="row justify-content-md-left">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/htmlCssJs.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge1.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 1</h4>
-          <h6 class="card-subtitle">html/css/js</h6>
-          <p class="card-text">A first look to see the basics of the languages of the web and starting to write code.</p>
+          <h6 class="card-subtitle">Basic Step</h6>
+          <p class="card-text">The most important step to learn. It takes a bit of practise to do it without thinking but salsa starts here.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -34,11 +34,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/formatingPageContent.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge2.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 2</h4>
-          <h6 class="card-subtitle">Formatting page content</h6>
-          <p class="card-text">Using html and different tags to format pages in different ways.</p>
+          <h6 class="card-subtitle">Cross Body Lead(cbl)</h6>
+          <p class="card-text">If you want to switch sides in salsa, this is how to do it and it gives a lot of nice possible combinations and flair.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -46,11 +46,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/structureContent.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge3.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 3</h4>
-          <h6 class="card-subtitle">Structure content</h6>
-          <p class="card-text">Structure content in html and use the right tags while structuring them.</p>
+          <h6 class="card-subtitle">Right turn</h6>
+          <p class="card-text">This is the most common turn in salsa and you'll be doing a lot of those so its important to do it smoothly.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -58,11 +58,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/creatingLinks.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge4.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 4</h4>
-          <h6 class="card-subtitle">Creating links</h6>
-          <p class="card-text">How to use links to connect within the page or external websites.</p>
+          <h6 class="card-subtitle">Basic Combination</h6>
+          <p class="card-text">From our first 3 challenges we can already do a very cool combination. So we practise to automate it here.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -72,11 +72,11 @@
   <div class="row justify-content-md-left">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/creatingLists.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge5.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 5</h4>
-          <h6 class="card-subtitle">Creating lists</h6>
-          <p class="card-text">Use different types of lists to order your content and learn and see when to use which list.</p>
+          <h6 class="card-subtitle">guys turn, ladies turn</h6>
+          <p class="card-text">Also called the double spot turn, its easy to learn, looks cool and a smooth way to change hands also.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -84,11 +84,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/controllingStylingControllingStylingPart2.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge6.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 6</h4>
-          <h6 class="card-subtitle">Controlling Styling</h6>
-          <p class="card-text">Seeing the 3 different ways to add css to your webpage and finding out most common way.</p>
+          <h6 class="card-subtitle">step back, check + turn</h6>
+          <p class="card-text">This is a nice change from the other steps. Once you are used to the step back, this is a very relaxed move.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -96,11 +96,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/controllingStylingControllingStylingPart2.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge7.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 7</h4>
-          <h6 class="card-subtitle">Controlling styling part 2</h6>
-          <p class="card-text">Learn how to give colors, fonts and other attributes and properties to different elements on your webpages.</p>
+          <h6 class="card-subtitle">cbl inside turn</h6>
+          <p class="card-text">Maybe one of the most challenging moves in the beginning, its not easy to lead and it takes practise.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -108,11 +108,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssBasics.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge8.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 8</h4>
-          <h6 class="card-subtitle">CSS basics</h6>
-          <p class="card-text">Understanding all the basic elements of css to create layouts and see how they work together.</p>
+          <h6 class="card-subtitle">Improvers combination</h6>
+          <p class="card-text">Dancing salsa on a public dancefloor starts here, after this combination you'll look smooth.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -122,11 +122,11 @@
   <div class="row justify-content-md-left">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssCommonConcepts.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge9.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 9</h4>
-          <h6 class="card-subtitle">CSS common concepts</h6>
-          <p class="card-text">Understanding all the basic elements of css and how they work together.</p>
+          <h6 class="card-subtitle">left turn, 2 hand turns</h6>
+          <p class="card-text">The left turn is not much used on its own, but understanding it makes the complicated combinations much easier.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -134,11 +134,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssFrameworks.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge10.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 10</h4>
-          <h6 class="card-subtitle">CSS frameworks</h6>
-          <p class="card-text">Seeing a faster and structured way using a library with pre-defined css(bootstrap).</p>
+          <h6 class="card-subtitle">2 hand turn, 2 hand cbl inside turn</h6>
+          <p class="card-text">Using 2 hands gives you more control and also makes it feel more intimate.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -146,11 +146,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/addingJavaScript.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge11.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 11</h4>
-          <h6 class="card-subtitle">Adding Javascript</h6>
-          <p class="card-text">See how we add javascript to our html code and how we add interaction to our webpage using Javascript.</p>
+          <h6 class="card-subtitle">2 hand cbl, comb over</h6>
+          <p class="card-text">Its important to know how to switch from 2 hands to other hand holds. you'll get an understanding of all 6 hand holds.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -158,11 +158,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/conditionalJavaScript.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'salsa/challenge12.JPG', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 12</h4>
-          <h6 class="card-subtitle">Conditional Javascript</h6>
-          <p class="card-text">Getting a first look on the power of conditional code on a webpage.</p>
+          <h6 class="card-subtitle">Intermediate combi</h6>
+          <p class="card-text">Its time to show off. With the stuff you know now there are endless combinations. And it will be easy to add new moves.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
