--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -1,11 +1,14 @@
 $main-color: #7302A1;
+$first-text: #111111;
+$second-text: #656565;
+$third-text: #959595;
 .footer {
   width: 100%;
   height: 130px;
   line-height: 60px;
   background-color: #ffffff;
   font-size: 12px;
-  color: #959595;
+  color: $third-text;
   .container{
     margin-top: 50px;
   }
@@ -14,7 +17,7 @@ $main-color: #7302A1;
   }
   a{
     padding: 0px 10px;
-    color: #959595;
+    color: $third-text;
   }
   a:hover{
     color: $main-color;
