--- a/app/views/welcome/photography.html.erb
+++ b/app/views/welcome/photography.html.erb
@@ -1,8 +1,8 @@
-<div id="passion-cover" class="jumbotron" style="background-image: url('<%= asset_path 'programming.jpg' %>')">
+<div id="passion-cover" class="jumbotron" style="background-image: url('<%= asset_path 'photography.jpg' %>')">
   <div class="overlay"></div>
   <div class="row justify-content-md-center d-flex h-100">
     <div class="col-md-8 content align-self-center">
-      <div align="center" class="main-text">Programming Bootcamp</div>
+      <div align="center" class="main-text">Photography Bootcamp</div>
       <div align="center" class="secondary-text">Learn AND Teach!</div>
       <div align="center" class="paragraph">FOLLOW-ALONG  SELF-PRACTISE TEAM-CHALLENGE</div>
       <div align="center">
@@ -22,11 +22,11 @@
   <div class="row justify-content-md-left">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/htmlCssJs.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/aperture.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 1</h4>
-          <h6 class="card-subtitle">html/css/js</h6>
-          <p class="card-text">A first look to see the basics of the languages of the web and starting to write code.</p>
+          <h6 class="card-subtitle">Aperture</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -34,11 +34,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/formatingPageContent.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/shutter_speed.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 2</h4>
-          <h6 class="card-subtitle">Formatting page content</h6>
-          <p class="card-text">Using html and different tags to format pages in different ways.</p>
+          <h6 class="card-subtitle">Shutter speed</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -46,11 +46,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/structureContent.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/iso.png', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 3</h4>
-          <h6 class="card-subtitle">Structure content</h6>
-          <p class="card-text">Structure content in html and use the right tags while structuring them.</p>
+          <h6 class="card-subtitle">ISO</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -58,11 +58,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/creatingLinks.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/exposure.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 4</h4>
-          <h6 class="card-subtitle">Creating links</h6>
-          <p class="card-text">How to use links to connect within the page or external websites.</p>
+          <h6 class="card-subtitle">Exposure combination</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -72,11 +72,11 @@
   <div class="row justify-content-md-left">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/creatingLists.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/digitalsensor_sizes.png', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 5</h4>
-          <h6 class="card-subtitle">Creating lists</h6>
-          <p class="card-text">Use different types of lists to order your content and learn and see when to use which list.</p>
+          <h6 class="card-subtitle">Image sensors</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -84,11 +84,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/controllingStylingControllingStylingPart2.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/lenses.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 6</h4>
-          <h6 class="card-subtitle">Controlling Styling</h6>
-          <p class="card-text">Seeing the 3 different ways to add css to your webpage and finding out most common way.</p>
+          <h6 class="card-subtitle">Lenses</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -96,11 +96,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/controllingStylingControllingStylingPart2.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/composition.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 7</h4>
-          <h6 class="card-subtitle">Controlling styling part 2</h6>
-          <p class="card-text">Learn how to give colors, fonts and other attributes and properties to different elements on your webpages.</p>
+          <h6 class="card-subtitle">Composition</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -108,11 +108,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssBasics.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/depth_of_field.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 8</h4>
-          <h6 class="card-subtitle">CSS basics</h6>
-          <p class="card-text">Understanding all the basic elements of css to create layouts and see how they work together.</p>
+          <h6 class="card-subtitle">Depth of field</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -122,11 +122,11 @@
   <div class="row justify-content-md-left">
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssCommonConcepts.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/basic_flash.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 9</h4>
-          <h6 class="card-subtitle">CSS common concepts</h6>
-          <p class="card-text">Understanding all the basic elements of css and how they work together.</p>
+          <h6 class="card-subtitle">Basic Flash</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -134,11 +134,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/cssFrameworks.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/fill_flash.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 10</h4>
-          <h6 class="card-subtitle">CSS frameworks</h6>
-          <p class="card-text">Seeing a faster and structured way using a library with pre-defined css(bootstrap).</p>
+          <h6 class="card-subtitle">Fill flash</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -146,11 +146,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/addingJavaScript.png', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/multiple_flash.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 11</h4>
-          <h6 class="card-subtitle">Adding Javascript</h6>
-          <p class="card-text">See how we add javascript to our html code and how we add interaction to our webpage using Javascript.</p>
+          <h6 class="card-subtitle">Multiple flash</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
@@ -158,11 +158,11 @@
 
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="card text-center" style="margin-bottom: 20px;">
-        <%= image_tag 'programming/conditionalJavaScript.jpg', class: 'card-img-top card-img-top-programming' %>
+        <%= image_tag 'photography/photographing_people.jpg', class: 'card-img-top' %>
         <div class="card-body">
           <h4 class="card-title">Challenge 12</h4>
-          <h6 class="card-subtitle">Conditional Javascript</h6>
-          <p class="card-text">Getting a first look on the power of conditional code on a webpage.</p>
+          <h6 class="card-subtitle">Photographing people</h6>
+          <p class="card-text">We never use harsh chemicals that might harm you or the environment. We even donate 3% of our earnings to help save the endangered red panda.</p>
           <a href="<%= trainers_path %>" class="btn btn-primary">1:1 training</a>
         </div>
       </div>
