--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,75 +1,77 @@
-<div class="container old-spacer">
-  <%= bootstrap_devise_error_messages! %>
-  <div class="panel panel-default devise-bs">
-    <div class="panel-heading">
-      <h4>My profile</h4>
+<div id="sign-up">
+  <div class="container">
+    <%= bootstrap_devise_error_messages! %>
+    <div class="row justify-content-md-center">
+      <div class="card text-center" style="width: 30rem; margin-bottom: 20px;">
+        <div class="card-body">
+          <div class="card-title">My Profile</div>
+          <div class="form-group">
+            <label>Email:</label>
+            <p><%= @user.email %></p>
+          </div>
+          <div class="form-group">
+            <label>First name:</label>
+            <p><%= @user.first_name.present? ? @user.first_name : "Not provided" %></p>
+          </div>
+          <div class="form-group">
+            <label>Last name:</label>
+            <p><%= @user.last_name.present? ? @user.last_name : "Not provided" %></p>
+          </div>
+          <div class="form-group">
+            <label>Gender:</label>
+            <p><%= !@user.male.nil? ? (@user.male == true ? 'Male' : "Female") : "Not provided" %></p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="panel-body">
-      <div class="form-group">
-        <label>Email:</label>
-        <p><%= @user.email %></p>
-      </div>
-      <div class="form-group">
-        <label>First name:</label>
-        <p><%= @user.first_name.present? ? @user.first_name : "Not provided" %></p>
-      </div>
-      <div class="form-group">
-        <label>Last name:</label>
-        <p><%= @user.last_name.present? ? @user.last_name : "Not provided" %></p>
-      </div>
-      <div class="form-group">
-        <label>Gender:</label>
-        <p><%= !@user.male.nil? ? (@user.male == true ? 'Male' : "Female") : "Not provided" %></p>
+
+    <div class="row justify-content-md-center">
+      <div class="card" style="width: 30rem;">
+        <div class="card-body">
+          <div class="card-title">Edit account information</div>
+          <hr>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <div class="form-group">
+              <%= f.label :email, "EMAIL" %>
+              <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :first_name, "FIRST NAME" %>
+              <%= f.text_field :first_name, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :last_name, "LAST NAME" %>
+              <%= f.text_field :last_name, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :male, 'GENDER' %>
+              <%= f.select :male, [['Male', true],['Female', false]], {include_blank: true}, { class: 'form-control' }%>
+            </div>
+            <div class="red-back">
+              <span>Edit this fields only if you want to change your password!</span>
+              <div class="form-group">
+                <%= f.label :password_confirmation, "NEW PASSWORD" %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
+                <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+              </div>
+              <div class="form-group">
+                <%= f.label :password_confirmation, "PASSWORD CONFIRMATION" %>
+                <%= f.password_field :password_confirmation, class: 'form-control'  %>
+              </div>
+            </div>
+            <div class="green-back">
+              <div class="form-group">
+                <%= f.label :current_password, "CURRENT PASSWORD" %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
+                <%= f.password_field :current_password, class: 'form-control' %>
+              </div>
+            </div>
+            <%= f.submit t('.sign_up', default: 'Update'), class: 'btn btn-primary' %>
+          <% end %>
+          <div id="links">
+            <%= t('.unhappy', default: 'Unhappy') %>? <%= link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete %>
+            <%= link_to t('.back', default: 'Back'), :back %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="panel panel-default devise-bs">
-    <div class="panel-heading">
-      <h4><%= t('.title', resource: resource_class.model_name.human , default: "Edit #{resource_name.to_s.humanize}") %></h4>
-    </div>
-    <div class="panel-body">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :first_name %>
-          <%= f.text_field :first_name, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :last_name %>
-          <%= f.text_field :last_name, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label 'Gender' %>
-          <%= f.select :male, [['Male', true],['Female', false]], include_blank: true, class: 'form-control' %>
-        </div>
-        <div class="red-back">
-          <span>Edit this fields only if you want to change your password!</span>
-          <div class="form-group">
-            <label>New password</label> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
-            <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-          </div>
-          <div class="form-group">
-            <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation, class: 'form-control'  %>
-          </div>
-        </div>
-        <div class="green-back">
-          <div class="form-group">
-            <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
-            <%= f.password_field :current_password, class: 'form-control' %>
-          </div>
-        </div>
-
-        <%= f.submit t('.update', default: 'Update'), class: 'btn btn-primary' %>
-      <% end %>
-    </div>
-  </div>
-
-  <p><%= t('.unhappy', default: 'Unhappy') %>? <%= link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete %>.</p>
-
-  <%= link_to t('.back', default: 'Back'), :back %>
-
 </div>
