--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,51 @@
-<div class="container old-spacer">
-  <%= bootstrap_devise_error_messages! %>
-  <div class="panel panel-default devise-bs">
-    <div class="panel-heading">
-      <h4><%= t('.sign_up', default: 'Sign up') %></h4>
-    </div>
-    <div class="panel-body">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f| %>
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+<div id="sign-up">
+  <div class="container">
+    <%= bootstrap_devise_error_messages! %>
+    <div class="row justify-content-md-center">
+      <div class="card" style="width: 30rem;">
+        <div class="card-body">
+          <div align="center">
+            <span class="social-btn"></span>
+            <a href="#" class="btn btn-facebook">
+              Sign up with Facebook
+            </a>
+          </div>
+          <hr>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f| %>
+            <div class="form-group">
+              <%= f.label :email, "EMAIL" %>
+              <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :first_name, "FIRST NAME" %>
+              <%= f.text_field :first_name, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :last_name, "LAST NAME" %>
+              <%= f.text_field :last_name, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :male, 'GENDER' %>
+              <%= f.select :male, [['Male', true],['Female', false]], {include_blank: true}, { class: 'form-control' }%>
+            </div>
+            <div class="form-group">
+              <%= f.label :password, "PASSWORD" %>
+              <%= f.password_field :password, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password_confirmation, "PASSWORD CONFIRMATION" %>
+              <%= f.password_field :password_confirmation, class: 'form-control' %>
+            </div>
+            <div align="center">
+              <label>You agree to the <b>Terms &amp; Conditions.</b></label>
+            </div>
+            <%= f.submit t('.sign_up', default: 'Sign up'), class: 'btn btn-primary' %>
+          <% end %>
+          <div id="links">
+            <%= render 'devise/shared/links' %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.label :first_name %>
-          <%= f.text_field :first_name, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :last_name %>
-          <%= f.text_field :last_name, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label 'Gender' %>
-          <%= f.select :male, [['Male', true],['Female', false]], include_blank: true, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :password %>
-          <%= f.password_field :password, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-          <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, class: 'form-control' %>
-        </div>
-        <%= f.submit t('.sign_up', default: 'Sign up'), class: 'btn btn-primary' %>
-      <% end %>
+      </div>
     </div>
   </div>
-  <%= render 'devise/shared/links' %>
-
 </div>
