fix datatable/team generator table UI

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 //  */
 @import "bootstrap";
 @import "font-awesome";
-@import "dataTables/bootstrap/3/jquery.dataTables.bootstrap";
+@import "dataTables/jquery.dataTables";
 @import "devise_bootstrap_views";
 @import "progressive_render";
 $main-color: #7302A1;
