update ui: feedbacks and team generator

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,6 +37,11 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <%= link_to 'My Profile', edit_user_registration_path, class: 'dropdown-item' %>
+                <% if current_user.role_id == 2 %>
+                  <%= link_to 'Feedbacks', feedbacks_path, class: 'dropdown-item' %>
+                  <%= link_to 'Team generator', new_team_path, class: 'dropdown-item' %>
+                <% end %>
+                <%= link_to 'Add new feedback', new_feedback_path, class: 'dropdown-item' %>
                 <%= link_to('Logout', destroy_user_session_path,
                                       class: 'dropdown-item', title: 'Logout', :method => :delete) %>
               </div>
