--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -1,97 +1,73 @@
-<div class="container old-spacer">
-  <h3>Feedbacks for <%= @bootcamp_name.title.titleize %></h3>
+<div class="container" style="margin-top: 30px;">
+  <h5>Feedbacks for <%= @bootcamp_name.title.titleize %></h5>
   <hr>
   <% @feedbacks.each do |feedback| %>
-  <div class="row feedback-card">
-    <div class="form-horizontal">
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Name</label>
-          <div class="col-sm-10">
-            <%= feedback.name %>
+  <div class="row justify-content-md-center">
+    <div class="col-md-6">
+      <div class="card" style="margin: 10px;">
+        <form style="padding: 10px;">
+          <div class="form-group">
+            <label>Name</label>
+            <input type="text" value="<%= feedback.name %>" disabled class="form-control">
           </div>
-        </div>
 
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Company and position</label>
-          <div class="col-sm-10">
-            <%= feedback.company_and_position %>
+          <div class="form-group">
+            <label>Company and position</label>
+            <input type="text" value="<%= feedback.company_and_position %>" disabled class="form-control">
           </div>
-        </div>
 
-        <div class="form-group">
-          <label class="col-sm-2 control-label">On a scale from 1(negative) to 10(positive) I rate the bootcamp with a</label>
-          <div class="col-sm-10">
-            <%= feedback.rate_bootcamp %>
+          <div class="form-group">
+            <label>On a scale from 1(negative) to 10(positive) I rate the bootcamp with a</label>
+            <input type="text" value="<%= feedback.rate_bootcamp %>" disabled class="form-control">
           </div>
-        </div>
 
-        <div class="form-group">
-          <label class="col-sm-2 control-label">I got the most value out of this part of the bootcamp</label>
-          <div class="col-sm-10">
-            <%= feedback.most_value %>
+          <div class="form-group">
+            <label>I got the most value out of this part of the bootcamp</label>
+            <input type="text" value="<%= feedback.most_value %>" disabled class="form-control">
           </div>
-        </div>
 
-        <div class="form-group">
-          <label class="col-sm-2 control-label">I got the least value out of this part of the bootcamp</label>
-          <div class="col-sm-10">
-            <%= feedback.least %>
+          <div class="form-group">
+            <label>I got the least value out of this part of the bootcamp</label>
+            <input type="text" value="<%= feedback.least %>" disabled class="form-control">
           </div>
-        </div>
 
-        <div class="form-group">
-          <label class="col-sm-2 control-label">After this bootcamp Im planning to</label>
-          <div class="col-sm-10">
-            <%= feedback.plans %>
+          <div class="form-group">
+            <label>After this bootcamp Im planning to</label>
+            <input type="text" value="<%= feedback.plans %>" disabled class="form-control">
           </div>
-        </div>
+
+          <div class="form-group">
+            <label>Three words to describe this bootcamp</label>
+            <input type="text" value="<%= feedback.describe_bootcamp %>" disabled class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label>On a scale from 1(negative) to 10(positive) I rate the trainer with a</label>
+            <input type="text" value="<%= feedback.rate_trainer %>" disabled class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label>Suggestion / tips / compliments to the trainer</label>
+            <input type="text" value="<%= feedback.tips_to_trainer %>" disabled class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label>Additional suggestion / remarks</label>
+            <input type="text" value="<%= feedback.suggestion %>" disabled class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label>Are there any other Bootcamps you would like to have or are interested in?</label>
+            <input type="text" value="<%= feedback.other_bootcamps %>" disabled class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label>Can we contact you for (discounted/beta) bootcamps?</label>
+            <input type="text" value="<%= feedback.contact %>" disabled class="form-control">
+          </div>
+        </form>
       </div>
 
-      <div class="col-md-6">
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Three words to describe this bootcamp</label>
-          <div class="col-sm-10">
-            <%= feedback.describe_bootcamp %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">On a scale from 1(negative) to 10(positive) I rate the trainer with a</label>
-          <div class="col-sm-10">
-            <%= feedback.rate_trainer %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Suggestion / tips / compliments to the trainer</label>
-          <div class="col-sm-10">
-            <%= feedback.tips_to_trainer %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Additional suggestion / remarks </label>
-          <div class="col-sm-10">
-            <%= feedback.suggestion %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Are there any other Bootcamps you would like to have or are interested in? </label>
-          <div class="col-sm-10">
-            <%= feedback.other_bootcamps %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label">Can we contact you for (discounted/beta) bootcamps?</label>
-          <div class="col-sm-10">
-            <%= feedback.contact %>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
   <% end %>
