--- a/app/assets/stylesheets/pages/pages.scss
+++ b/app/assets/stylesheets/pages/pages.scss
@@ -1,6 +1,7 @@
 $first-text: #111111;
 $second-text: #656565;
 $third-text: #959595;
+$main-color: #7302A1;
 #passion-cover{
   height: 100vh;
   background-repeat: no-repeat;
