--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -71,7 +71,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.submit class:"btn btn-success" %>
+        <%= f.submit class:"btn btn-primary" %>
       </div>
       <% end %>
     </div>
