--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav id="main-nav" class="navbar navbar-expand-md">
+<nav id="main-nav" class="navbar navbar-expand-md navbar-light">
   <div class="container">
     <a class="navbar-brand" href="<%= root_path %>">
       <%= image_tag 'logo.png' %>
