--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,8 +1,15 @@
-<div class="container old-spacer">
-  <h3>Show team</h3>
+<div class="container" style="margin-top: 30px;">
+  <h5>Show team</h5>
+  <hr>
 
-  <% @team.users.each do |f| %>
-    <%= f.email %> <br>
-  <% end %>
-
+  <div class="row justify-content-md-center">
+    <div class="col-md-6">
+      <div class="card" style="margin: 10px; padding: 10px;">
+        <% @team.users.each do |user| %>
+          <p style="font-size: 14px;"><b>Name:</b> <%= "#{user.first_name} #{user.last_name}" %></p>
+          <p style="font-size: 14px;"><b>Email:</b> <%= user.email %></p>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
