delete uers page UI changes

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,6 +41,7 @@
                   <%= link_to 'Feedbacks', feedbacks_path, class: 'dropdown-item' %>
                   <%= link_to 'Team generator', new_team_path, class: 'dropdown-item' %>
                   <%= link_to 'Teams', teams_path, class: 'dropdown-item' %>
+                  <%= link_to 'Delete users', delete_users_path, class: 'dropdown-item' %>
                 <% end %>
                 <%= link_to 'Add new feedback', new_feedback_path, class: 'dropdown-item' %>
                 <%= link_to('Logout', destroy_user_session_path,
