--- a/app/views/welcome/all_users.html.erb
+++ b/app/views/welcome/all_users.html.erb
@@ -1,29 +1,36 @@
-<div class="container old-spacer">
-  <table class="table table-striped datatable">
-    <thead>
-      <tr>
-        <th>User email</th>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Delete</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= user.email %></td>
-          <td><%= user.first_name %></td>
-          <td><%= user.last_name %></td>
-          <td><%= link_to "Delete user", {controller:"welcome", action:"delete_user", :id => user.id},
-                          method: :delete, data:{confirm:"Are you sure?"}, class:"btn btn-xs btn-danger" %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+<div class="container" style="margin-top: 30px;">
+  <h5>Delete users</h5>
+  <hr>
+  <div class="row justify-content-md-center">
+    <div class="col-md-9">
+      <table class="table table-sm table-hover datatable">
+        <thead>
+          <tr>
+            <th>User email</th>
+            <th>Name</th>
+            <th>Gender</th>
+            <th>Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= user.email %></td>
+              <td><%= "#{user.first_name} #{user.last_name}" %></td>
+              <td><%= user.male.nil? ? '-' : (user.male ? 'Male' : 'Female') %></td>
+              <td><%= link_to "Delete user", {controller:"welcome", action:"delete_user", :id => user.id},
+                              method: :delete, data:{confirm:"Are you sure?"}, class:"btn btn btn-outline-danger btn-sm" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 <script type="text/javascript">
   $('.datatable').DataTable({
     // ajax: ..., autoWidth: false, pagingType: 'full_numbers', processing: true, serverSide: true, Optional, if you want full pagination controls. Check dataTables documentation to learn more about available options.
     // http://datatables.net/reference/option/pagingType
+    "lengthMenu": [ 25, 50, 75, 100 ]
   });
 </script>
